<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/background">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:padding="10dp"
                android:text="@string/teamA"
                android:textColor="@color/text_color"
                android:textSize="30sp"
                app:fontFamily="@font/raleway_medium"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textAlignment="center"
                android:background="@color/view" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/scoreA"
                android:textColor="@color/score_color"
                android:paddingBottom="5dp"
                android:textSize="100sp"
                app:fontFamily="sans-serif-medium"
                android:id="@+id/teamA_score"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/onepoint"
                android:background="@drawable/rounded"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:fontFamily="@font/raleway_medium"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="addoneforA"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/threepoints"
                android:background="@drawable/rounded"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:fontFamily="@font/raleway_medium"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="addthreeforA"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fivepoints"
                android:background="@drawable/rounded"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:fontFamily="@font/raleway_medium"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="addfiveforA"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/negativeone"
                android:background="@drawable/rounded"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:fontFamily="@font/raleway_medium"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="suboneforA"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/negativetwo"
                android:background="@drawable/rounded"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:fontFamily="@font/raleway_medium"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="subtwoforA"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/negativethree"
                android:background="@drawable/rounded"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:fontFamily="@font/raleway_medium"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="subthreeforA"/>


        </LinearLayout>

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@color/view"
            android:layout_marginBottom="70dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:padding="10dp"
                android:text="@string/teamB"
                android:textColor="@color/text_color"
                android:background="@color/view"
                android:textSize="30sp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textAlignment="center"
                app:fontFamily="@font/raleway_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/scoreB"
                android:textColor="@color/score_color"
                android:paddingBottom="5dp"
                android:textSize="100sp"
                app:fontFamily="sans-serif-medium"
                android:id="@+id/teamB_score"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/onepoint"
                android:background="@drawable/rounded"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:fontFamily="@font/raleway_medium"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="addoneforB"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/threepoints"
                android:background="@drawable/rounded"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:fontFamily="@font/raleway_medium"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="addthreeforB"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fivepoints"
                android:background="@drawable/rounded"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:fontFamily="@font/raleway_medium"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="addfiveforB"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/negativeone"
                android:background="@drawable/rounded"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:fontFamily="@font/raleway_medium"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="suboneforB"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/negativetwo"
                android:background="@drawable/rounded"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:fontFamily="@font/raleway_medium"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="subtwoforB"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/negativethree"
                android:background="@drawable/rounded"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:fontFamily="@font/raleway_medium"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="subthreeforB"/>

        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/rounded"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:onClick="reset"/>


</RelativeLayout>
